# quebex

./: .gitignore  README.md  REUSE.toml  TODO.txt  cabal.project  cabal.project.local  query-splitter.hs  test-query.smt2
.githooks/: pre-commit
.guix/: channels.scm  manifest.scm
.guix/modules/: quebex-packages.scm
quebex/: CHANGELOG.md  quebex.cabal
quebex-cli/: quebex-cli.cabal
quebex-cli/app/: Main.hs
quebex-cli/app/quebex/: Main.hs
quebex-cli/app/quebex-symex/: Main.hs
quebex-cli/src/Data/: KTest.hs
quebex-cli/src/Language/QBE/: CmdLine.hs
quebex-cli/src/System/Log/: KTest.hs
quebex-cli/test/: KTest.hs  Main.hs
quebex-cli/test/testdata/: multiple-variables.ktest  single-variable.ktest
quebex-symex/: quebex-symex.cabal
quebex-symex/bench/: Exec.hs  Main.hs  SMT.hs  SMTUnwind.hs  Statistics.hs
quebex-symex/bench/data/: bubble-sort.c  bubble-sort.qbe  prime-numbers.c  prime-numbers.qbe
quebex-symex/bench/data/Exec/: bubble-sort.qbe
quebex-symex/bench/data/SMT/: bubble-sort.c  bubble-sort.qbe  insertion-sort-uchar.c  insertion-sort-uchar.qbe  prime-numbers.c  prime-numbers.qbe
quebex-symex/src/: SimpleBV.hs
quebex-symex/src/Language/QBE/: Backend.hs
quebex-symex/src/Language/QBE/Backend/: DFS.hs  ExecTree.hs  Model.hs  QueryLogger.hs  QuerySplitter.hs  Store.hs  Tracer.hs
quebex-symex/src/Language/QBE/Simulator/: Explorer.hs  Symbolic.hs
quebex-symex/src/Language/QBE/Simulator/Concolic/: Expression.hs  State.hs
quebex-symex/src/Language/QBE/Simulator/Symbolic/: Expression.hs  Folding.hs  Store.hs  Tracer.hs  Unwind.hs
quebex-symex/test/: BV.hs  Backend.hs  Concolic.hs  Explorer.hs  Expression.hs  Golden.hs  Main.hs  Simulator.hs  Symbolic.hs  Util.hs
quebex-symex/test/golden/: address-concretization.c  address-concretization.qbe  prime-numbers.c  prime-numbers.qbe  three-branches.c  three-branches.qbe
quebex-symex/test/testdata/: insertion-sort-error-on-42.c  insertion-sort-error-on-42.qbe  out-of-bounds-error.c  out-of-bounds-error.qbe  single-error-case.c  single-error-case.qbe
quebex-syntax/: CHANGELOG.md  quebex-syntax.cabal
quebex-syntax/src/Language/: QBE.hs
quebex-syntax/src/Language/QBE/: Numbers.hs  Parser.lhs  Types.hs  Util.hs
quebex-syntax/test/: Golden.hs  Main.hs  Parser.hs  Types.hs
quebex-syntax/test/golden/: bubble-sort.qbe  call-instruction.ssa  comments.qbe  data-definition-whitespace.qbe  data-linkage.qbe  data.qbe  dynconst.qbe  empty-definitions.ssa  float-literal-plus-sign.qbe  function-definition.ssa  hare-hello-world.qbe  load-instructions.ssa  number-literal-plus-sign.qbe  phi-instructions.qbe  scc-prime-numbers.qbe  value-global.qbe
quebex/bench/: Exec.hs  Main.hs
quebex/bench/data/: bubble-sort.c  bubble-sort.qbe
quebex/src/Language/QBE/: Generator.hs  Simulator.hs  SimulatorNew.hs
quebex/src/Language/QBE/Analysis/: CDG.hs  CFG.hs  Graph.hs
quebex/src/Language/QBE/Simulator/: Error.hs  Expression.hs  Generator.hs  Memory.hs  State.hs  Tracer.hs
quebex/src/Language/QBE/Simulator/Default/: Expression.hs  Funcs.hs  Generator.hs  State.hs
quebex/test/: Analysis.hs  Expression.hs  Main.hs  Memory.hs  Simulator.hs  State.hs
quebex/test/testdata/: builtin-vaarg-vm.c  builtin-vaarg-vm.qbe  disjunction.qbe
