cabal-version:      3.4
name:               quebex-cli
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
-- license-file:
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    -- -Wall-missed-specializations can be useful too
    ghc-options: -Wall

common opts
    ghc-options: -fspecialise-aggressively

executable quebex-symex
    import:               warnings, opts
    main-is:              Main.hs
    hs-source-dirs:       app/quebex-symex
    default-language:     GHC2021
    build-depends:
      base,
      quebex,
      quebex-symex,
      quebex-syntax,
      optparse-applicative >=0.17.0.0
