cabal-version:      3.4
name:               quebex-cli
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
-- license-file:
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    -- -Wall-missed-specializations can be useful too
    ghc-options: -Wall

common opts
    ghc-options: -fspecialise-aggressively

library
    import:           warnings, opts
    hs-source-dirs:   src
    default-language: GHC2021

    build-depends:
      base,
      binary,
      bytestring,
      quebex,
      quebex-syntax,
      optparse-applicative >=0.17.0.0

    exposed-modules:
      Data.KTest,
      Language.QBE.CmdLine

executable quebex
    import:               warnings, opts
    main-is:              Main.hs
    hs-source-dirs:       app/quebex
    default-language:     GHC2021
    build-depends:
      base,
      quebex,
      quebex-cli,
      quebex-syntax,
      optparse-applicative

executable quebex-symex
    import:               warnings, opts
    main-is:              Main.hs
    hs-source-dirs:       app/quebex-symex
    default-language:     GHC2021
    build-depends:
      base,
      quebex,
      quebex-cli,
      quebex-symex,
      quebex-syntax,
      optparse-applicative

test-suite quebex-cli-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:
      KTest

    build-depends:
        base,
        binary,
        bytestring,
        quebex-cli,
        tasty        >=1.4.3,
        tasty-hunit  >=0.10
