cabal-version:      3.4
name:               quebex-symex
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only AND MIT
-- license-file:
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- other-modules:
    hs-source-dirs:   src
    default-language: GHC2021

    build-depends:
      base,
      mtl,
      containers,
      random,
      quebex,
      quebex-syntax,
      simple-smt

    exposed-modules:
      Language.QBE.Backend,
      Language.QBE.Backend.Model,
      Language.QBE.Backend.Store,
      Language.QBE.Backend.ExecTree,
      Language.QBE.Backend.DFS,
      Language.QBE.Backend.Tracer,
      Language.QBE.Simulator.Explorer,
      Language.QBE.Simulator.Symbolic.Expression,
      Language.QBE.Simulator.Concolic.State,
      Language.QBE.Simulator.Concolic.Expression

test-suite quebex-symex-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:
      Util,
      Golden,
      Backend,
      Explorer,
      Symbolic,
      Concolic,

    build-depends:
        base,
        filepath,
        containers,
        quebex,
        quebex-syntax,
        quebex-symex,
        simple-smt,
        tasty        >=1.4.3,
        tasty-hunit  >=0.10,
        tasty-golden >=2.3.5
