cabal-version:      3.4
name:               quebex
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only AND MIT
license-file:       ../LICENSES/GPL-3.0-only.txt
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- other-modules:
    hs-source-dirs:   src
    default-language: GHC2021

    build-depends:
      base ^>=4.19.1.0,
      array,
      template-haskell,
      quebex-syntax,
      containers,
      mtl

    exposed-modules:
      Language.QBE.Analysis.CFG,
      Language.QBE.Simulator,
      Language.QBE.SimulatorNew,
      Language.QBE.Simulator.State,
      Language.QBE.Simulator.Tracer,
      Language.QBE.Simulator.Error,
      Language.QBE.Simulator.Memory,
      Language.QBE.Simulator.Expression,
      Language.QBE.Simulator.Default.Expression,
      Language.QBE.Simulator.Default.Generator,

test-suite quebex-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:
      Analysis,
      Simulator,
      Memory

    build-depends:
        base ^>=4.19.1.0,
        array,
        parsec,
        quebex,
        quebex-syntax,
        containers,
        tasty        >=1.4.3,
        tasty-hunit  >=0.10
