cabal-version:      3.4
name:               quebex
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only AND MIT
-- license-file:
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    -- -Wall-missed-specializations can be useful too
    ghc-options: -Wall

common opts
    ghc-options: -fspecialise-aggressively

library
    import:           warnings, opts
    -- other-modules:
    hs-source-dirs:   src
    default-language: GHC2021

    build-depends:
      base,
      array,
      template-haskell,
      quebex-syntax,
      containers,
      exceptions,
      mtl

    exposed-modules:
      Language.QBE.Analysis.CFG,
      Language.QBE.Simulator,
      Language.QBE.Simulator.State,
      Language.QBE.Simulator.Error,
      Language.QBE.Simulator.Memory,
      Language.QBE.Simulator.Expression,
      Language.QBE.Simulator.Default.State,
      Language.QBE.Simulator.Default.Expression,
      Language.QBE.Simulator.Default.Generator,

benchmark quebex-benchmarks
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs

    other-modules:
      Exec

    build-depends:
      base,
      criterion ^>= 1.6.4.0,
      quebex,
      quebex-syntax

test-suite quebex-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:
      Analysis,
      Simulator,
      Expression,
      Memory

    build-depends:
        base,
        array,
        parsec,
        quebex,
        quebex-syntax,
        containers,
        exceptions,
        tasty        >=1.4.3,
        tasty-hunit  >=0.10
